# Teleoperation

./: LICENSE
controller/catkin_ws/: start.sh
controller/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
controller/catkin_ws/devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
controller/catkin_ws/devel/lib/franka_control/: franka_combined_control_node  franka_control_node
controller/catkin_ws/devel/lib/franka_example_controllers/: dual_arm_interactive_marker.py  interactive_marker.py  move_to_start.py  teleop_gripper_node
controller/catkin_ws/devel/lib/franka_gripper/: franka_gripper_node
controller/catkin_ws/devel/lib/franka_teleop_lmt/: LfD_node  simple_gripper_client
controller/catkin_ws/devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
controller/catkin_ws/devel/lib/pkgconfig/: franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_teleop_lmt.pc  franka_visualization.pc
controller/catkin_ws/src/franka_ros/franka_example_controllers/: CMakeLists.txt
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/: CMakeLists copy.txt  CMakeLists.txt
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/LfD/LfD_skeleton/: LfD_GMM_GMR.m  LfD_TPGMM_GMR.m
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/TeleopData/: follower_10.txt  follower_2.txt  follower_6.txt  follower_9.txt
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/TeleopData/GMM/: follower_3.txt
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/TeleopData/TP-GMM/: follower_1.txt
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/config/: franka_example_controllers.yaml
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/include/franka_teleop_lmt/: cartesian_impedance_example_controller.h
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/launch/: MoveGripper.launch  Teleop.launch
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/models/green_frame/: model.config
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/src/: LfD.cpp  cartesian_impedance_example_controller.cpp  leader.cpp  moving_gripper.cpp
controller/catkin_ws/src/franka_ros/franka_teleop_lmt/world/: LfD_workspace.sdf
leader/catkin_ws/: out.txt
leader/catkin_ws/devel/: .catkin
leader/catkin_ws/devel/include/franka_example_controllers/: teleop_gripper_paramConfig.h  teleop_paramConfig.h
leader/catkin_ws/devel/include/franka_teleop_lmt/: JointTorqueComparison.h
leader/catkin_ws/devel/lib/franka_control/: franka_combined_control_node  franka_control_node
leader/catkin_ws/devel/lib/franka_example_controllers/: dual_arm_interactive_marker.py  interactive_marker.py  move_to_start.py  teleop_gripper_node
leader/catkin_ws/devel/lib/franka_gripper/: franka_gripper_node
leader/catkin_ws/devel/lib/franka_teleop_lmt/: LfD_node  leader_node
leader/catkin_ws/devel/lib/franka_visualization/: gripper_joint_state_publisher  robot_joint_state_publisher
leader/catkin_ws/devel/lib/pkgconfig/: franka_control.pc  franka_description.pc  franka_example_controllers.pc  franka_gazebo.pc  franka_gripper.pc  franka_hw.pc  franka_msgs.pc  franka_teleop_lmt.pc  franka_visualization.pc
leader/catkin_ws/src/franka_ros/franka_teleop_lmt/: CMakeLists.txt  franka_teleop_lmt_plugin.xml
(+108 files in other folders)
